hume-editor/src/editor/tests/multi_pane/snapshots/hume_editor__editor__tests__multi_pane__rendering_and_quit__grid_of_four_panes_renders_cross_junction_glyph.snap
---
source: hume-editor/src/editor/tests/multi_pane.rs
expression: "render_to_styled_string(&mut ed, rect)"
---
<fg=#32302f,bg=#736b5e>a</><fg=#8a826d,bg=#32302f>bc </><bg=#32302f>     </><fg=#7c6f64,bg=#3c3836>│</><fg=#47423e,bg=#32302f>  </><fg=#91732c,bg=#32302f>1 </><fg=#32302f,bg=#736b5e>a</><fg=#8a826d,bg=#32302f>bc</>
<fg=#5d564e,bg=#282828>~</><bg=#282828>        </><fg=#7c6f64,bg=#3c3836>│</><fg=#5d564e,bg=#282828>~</>
<fg=#5d564e,bg=#282828>~</><bg=#282828>        </><fg=#7c6f64,bg=#3c3836>│</><fg=#5d564e,bg=#282828>~</>
<fg=#7c6f64,bg=#3c3836>─────────</><fg=#fabd2f,bg=#282828>┼──────────</>
<fg=#47423e,bg=#32302f>  </><fg=#91732c,bg=#32302f>1 </><fg=#32302f,bg=#736b5e>a</><fg=#8a826d,bg=#32302f>bc </><bg=#32302f> </><fg=#fabd2f,bg=#282828>│</><fg=#665c54,bg=#3c3836>  </><fg=#fabd2f,bg=#3c3836>1 </><fg=#3c3836,bg=#bdae93>a</><fg=#ebdbb2,bg=#3c3836>bc</>
<fg=#5d564e,bg=#282828>~</><fg=#47423e,bg=#282828>   </><bg=#282828>     </><fg=#fabd2f,bg=#282828>│</><fg=#928374,bg=#282828>~</>
<fg=#5d564e,bg=#282828>~</><fg=#47423e,bg=#282828>   </><bg=#282828>     </><fg=#fabd2f,bg=#282828>│</><fg=#928374,bg=#282828>~</>
<fg=#3c3836,bg=#bdae93,bold>     1:1 *scr…</><fg=#665c54,bg=#bdae93>│</><fg=#3c3836,bg=#bdae93,bold> NOR</>
